libarchive: support linking with zlib compiled into QtCore
This removes the requirement of provisioning an external library just
for libarchive - as the official IFW binaries already use the zlib
bundled with Qt - and tracking updates from multiple sources.

Task-number: QTIFW-2803
Change-Id: I9878a3e1a9b5d649bc62590746151e2d5fe903ba
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/INSTALL
+++ b/INSTALL
@@ -64,10 +64,14 @@ files, with gzip, bzip2, and xz as available compression methods.
 The IFW_ZLIB_LIBRARY, IFW_BZIP2_LIBRARY, IFW_LZMA_LIBRARY, and IFW_ICONV_LIBRARY variables
 can be used to specify the exact library files if required.
 
-If you omit the feature, the builtin LZMA SDK library will be used as a fallback and
-installation of the additional dependencies can be skipped, but created installers will
-only support the 7zip format. Note that building IFW with LZMA SDK is deprecated and may not
-be available in future versions.
+If the Qt version used to build the Qt Installer Framework was configured with -qt-zlib and
+IFW_ZLIB_LIBRARY variable is empty, libarchive will attempt to use the zlib library compiled
+into the QtCore module, which removes the need for an external library.
+
+If you do not enable libarchive support, the builtin LZMA SDK library will be used as a
+fallback and installation of the additional dependencies can be skipped, but created
+installers will only support the 7zip format. Note that building IFW with LZMA SDK is
+deprecated and may not be available in future versions.
 
 ### Windows
 
