--- a/Changelog
+++ b/Changelog
@@ -11,6 +11,12 @@
 - Fix installer stalling when there's only one CPU core (QTIFW-2786)
 - Adjust the 'ready to install' message to avoid repeating the app name (SQUISH-9672)
 - CLI: add support for hiding values of printed options (QTIFW-2756)
+- Replace .vbs hack to update maintenance tool binary on Windows (QTIFW-2625)
+- Disable package manager and updater for offline maintenance tool (QTIFW-2627)
+- Display progress for loading component install scripts (QTIFW-2701)
+- Fix separators for localInstallerBinaryUsed() (QTIFW-2700)
+- Allow searching components also in the updater view (QTIFW-2667)
+- Add list of components to uninstall to installation log (QTIFW-2666)
 
 4.4.2
 - Fix uninstallation of needed virtual components
