--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,13 @@
+4.5.1
+- Make Settings operation to support _OLD and placeholders (QTIFW-2882)
+- ExtractOp: fix leftover empty directories when 'targetDir' arg is used (QTIFW-2764)
+- Fix errors occurring in full uninstall on macOS (QTIFW-2875)
+- Fix updater view behavior for non-checkable components (QTIFW-836)
+- Execute operation: fix overwritten error string for crashed processes (QTIFW-2875)
+- MetadataJob: fix removing compressed repositories after extracting (QTIFW-2876)
+- Fix replaced removal on update (QTIFW-2887)
+- Fix user set binary marker not having any effect on maintenance tool (QTIFW-2884)
+
 4.5.0
 - Fix required virtual components still uninstalled in some occasions
 - Update translations (QTIFW-2814)
