Update IFW version number and Changelog
Change-Id: Ic00bf9b6db604d4f3c0307a96229316ad1c1cd87
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+4.5.2
+- Fix freezing UI while searching components (QTIFW-2886)
+
 4.5.1
 - Make Settings operation to support _OLD and placeholders (QTIFW-2882)
 - ExtractOp: fix leftover empty directories when 'targetDir' arg is used (QTIFW-2764)
