Update Changelog to include updated openssl version
Prebuilt binaries include openssl version 1.1.1s from version 4.5.2
onwards.

Task-number: QTIFW-2862
Change-Id: I5907a09b7a4d601cbfd1fd3d97bc4d3d6f0dc690
Reviewed-by: Arttu Tarkiainen <arttu.tarkiainen@qt.io>
Reviewed-by: Katja Marttila <katja.marttila@qt.io>

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 4.5.2
 - Fix freezing UI while searching components (QTIFW-2886)
 - Show check box for AutoDependOn components in updater view (QTIFW-2855)
+- Update OpenSSL version to 1.1.1s in prebuilt binaries
 
 4.5.1
 - Make Settings operation to support _OLD and placeholders (QTIFW-2882)
