--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,16 @@
+4.7.0
+- Enable building with Qt6.5 (QTIFW-1829)
+- Build IFW binaries with Qt6.5
+- 3rdparty: update libarchive sources to 3.7.1 release
+- Use directory separators in path asking for process to be stopped
+- Allow generating offline installers from Gui (QTIFW-3072)
+- Show progress on Welcome screen (QTIFW-3068)
+- Fix page title text on the last page (QTIFW-3060)
+- Prevent uninstalling components when error occurs (QTIFW-3069)
+- Consider full length of 'key=value' string in user arguments
+- Fix admin rights handling during installer/updater/uninstaller runs (QTIFW-2929)
+- Fix documentation about network share (QTIFW-2933)
+
 4.6.1
 - Fix crash when filtering categories (QTIFW-3085)
 - Allow setting temporary repositories for offline-only installers (QTIFW-3078)
