--- a/INSTALL
+++ b/INSTALL
@@ -15,15 +15,15 @@ http://code.qt.io/cgit/installer-framework/installer-framework.git/
 Build a static Qt
 ---------------------
 
-Building the Qt Installer Framework from sources requires at least Qt version 5.15.2.
-Supported compilers are MSVC 2015 or newer, GCC 5 or newer,
-and Clang 11.0.0 or newer. Currently, the tested combination for Windows is Qt 5.15.2 with MSVC 2015 (Windows 10).
+Building the Qt Installer Framework from sources requires at least Qt version 6.6.0.
+Supported compilers are MSVC 2019 or newer, GCC 9 or newer,
+and Clang 13.0.0 or newer. Currently, the tested combination for Windows is Qt 6.6.0 with MSVC 2019 (Windows 10).
 
 If you want to ship your installer as a single file you have to build
 Qt and the Qt Installer Framework statically.
 
 See the Qt documentation for the prerequisites and steps to build Qt from sources.
-Please read SSL Import and Export Restrictions from http://doc.qt.io/qt-5/ssl.html if
+Please read SSL Import and Export Restrictions from http://doc.qt.io/qt-6/ssl.html if
 you are statically linking against OpenSSL libraries.
 
 ### Windows
@@ -32,21 +32,26 @@ Recommended configuration options for Microsoft Windows:
 
 configure -prefix %CD%\qtbase -release -static -static-runtime -accessibility -no-icu -no-sql-sqlite -no-qml-debug -nomake examples -nomake tests
 Build Qt:
-nmake module-qtbase module-qtdeclarative module-qttools module-qttranslations module-qtwinextras
+cmake --build . --parallel
+cmake --install .
 ### Linux
 
 Recommended configuration options for Linux:
 
-configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -qt-pcre -no-glib -no-cups -no-sql-sqlite -no-feature-gssapi -no-qml-debug -no-opengl -no-egl -no-xinput2 -no-sm -no-icu -nomake examples -nomake tests -no-libudev
+configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -qt-libjpeg -qt-pcre -no-glib -no-cups -no-sql-sqlite -no-feature-gssapi -no-qml-debug -no-opengl -no-egl -no-xinput2 -no-sm -no-icu -nomake examples -nomake tests -no-libudev -bundled-xcb-xinput -qt-harfbuzz -qt-doubleconversion
+
 Build Qt:
-make module-qtbase module-qtdeclarative module-qttools module-qttranslations
+cmake --build . --parallel
+cmake --install .
 ### macOS
 
 Recommended configuration options for macOS:
 
-configure -prefix $PWD/qtbase -release -static -no-securetransport -accessibility -qt-zlib -qt-libpng -qt-libjpeg -no-cups -no-sql-sqlite -no-qml-debug -nomake examples -nomake tests -no-freetype
+configure -prefix $PWD/qtbase -release -static -accessibility -qt-zlib -qt-libpng -no-cups -no-sql-sqlite -no-qml-debug -nomake examples -nomake tests -no-freetype
+
 Build Qt:
-make module-qtbase module-qtdeclarative module-qttools module-qttranslations
+cmake --build . --parallel
+cmake --install .
 
 
 Third party dependencies
